# combindexer

./: .gitignore  README.md  combined_variants_testing.ipynb  main.py  plans.txt  pyproject.toml  readBarcoding.py  readBarcoding_mod.py  removeDuplicates.py
barcodes/: Barcode-Gene.csv  Barcode-P5.csv  Barcode-P7.csv  Barcode-RT.csv  Barcode-RTPrimer.csv  Reads.csv  Samples.csv  Settings.csv  outputs.csv  reads_to_align.txt  sheet_names.txt
barcodes/.ipynb_checkpoints/: Barcode-Gene-checkpoint.csv  Barcode-SSSprimer-checkpoint.csv
combindexer/: countTargetedReads.py  readBarcoding.py  readBarcoding_single.py
example/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  Samples.csv  main.nf  main.sh  modules.nf  params.json  test.nf
example/.nextflow/: history
example/.nextflow/cache/2ce79bf1-95ff-4799-bd3f-cc9dfaf55192/: index.furious_mirzakhani
example/.nextflow/cache/5ac1acbb-6683-4520-80a7-2a903df2c367/: index.trusting_solvay
example/barcodes/: Barcode-Gene.csv  Barcode-P5.csv  Barcode-P7.csv  Barcode-RT.csv  Barcode-RTPrimer.csv  Barcode-SSSPrimer.csv  Outputs.csv  Outputs_new.csv  Outputs_old.csv  Reads.csv  Samples.csv
example/work/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3
example/work/3a/0c8652f70c056fbaa8d38ebd779162/: .command.err  .command.run  (+2 more)
example/work/sbatch_logs/: main_20251125_004530.err  main_20251125_004530.out
scripts/: removeDuplicatesGene.py
targeted_read_processing/: countTargetedReads.py  removeDuplicatesGene.py
(+8 files in other folders)
